--- a/pages/goodsInfo/goodsInfo.wxss
+++ b/pages/goodsInfo/goodsInfo.wxss
@@ -76,17 +76,18 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
 .audio_pro{
   margin-top:36rpx;
   margin-left:20rpx;
-  width:410rpx;
+  width:390rpx;
 }
 .audio_text{
   font-weight: bold;
-  margin-left:36rpx;
   color:#90BED5;
-  font-size: 10pt
+  font-size: 28rpx;
+  width: 180rpx;
+  text-align:center;
 }
 
 .buyBox{
-  width: 65vw;
+  width: 88vw;
   background: #ffffff;
   z-index: 10;
   font-size: 32rpx;
@@ -130,6 +131,6 @@ input{text-align: center;background: #F9F9F9;border-radius: 12rpx;height: 60rpx;
 }
 
 .buyBox .title{
-  margin: 60rpx auto;
+  margin: 90rpx auto;
   text-align: center;
 }
