--- a/pages/goodsInfo/goodsInfo.wxml
+++ b/pages/goodsInfo/goodsInfo.wxml
@@ -4,7 +4,7 @@
       <view class="buyBox">
         <view class="title">您没有查看歌曲的权限</view>
         <view class="bottom flex-center-Y">
-          <view class="left" bindtap="buyOne">单曲购买</view>
+          <view class="left" bindtap="buyOne">单曲购买(￥{{infoData.salePrice}})</view>
           <view class="right" bindtap="buyVip">成为会员</view>
         </view>
       </view>
