--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -2,12 +2,12 @@
 <view class="padding-btn">
   <view class="background-url">
     <!-- <image class="bg-img" src="../../images/my/banner.png"></image> -->
-    <view class="info flex-center-Y">
-        <view class="img" style="position:relative" bindtap="toEdit">
+    <view class="info flex-center-Y" wx:if="{{hasUserInfo==true}}">
+        <view class="img" style="position:relative">
           <image class="border-50" src="{{vipData.portrait}}"></image>
         </view>
         <view class="detail">
-          <view class="name" bindtap="toEdit">
+          <view class="name">
             {{vipData.nickName}}
             <text style="font-size:28rpx;color:#f8c00a">{{vipData.memberGrade==1000 ? '' : vipData.gradeName}}</text>
           </view>
@@ -15,13 +15,26 @@
           <view wx:else style="margin-top:30rpx;color:#ffffff;font-size:28rpx">{{vipData.gmtCreated}}到期</view>
         </view>
     </view>
+    <view class="info flex-center-Y" wx:else>
+        <view class="img" style="position:relative">
+          <image class="border-50" src="../../images/my/noLogin1.png"></image>
+        </view>
+        <view class="detail">
+          <view class="name">
+            点击登录
+          </view>
+        </view>
+    </view>
   </view>
   <view class="flex-center-Y" style="flex-wrap:wrap">
-    <view wx:for="{{myData}}" wx:key="index" class="{{item.isActive ? 'active bottomBox' : 'bottomBox'}}" data-index="{{index}}" bindtap="selectVip">
+    <view wx:for="{{myData}}" wx:key="index" style="{{item.isActive?'':'height:200rpx'}}" class="{{item.isActive ? 'active bottomBox' : 'bottomBox'}}" data-index="{{index}}" bindtap="selectVip">
       <view class="title">{{item.gradeName}}</view>
       <view class="date">期限: {{item.cycleTerm}}年</view>
-      <view class="tip">这是会员权益介绍这是介绍</view>
+      <!-- <view class="tip">这是会员权益介绍这是介绍</view> -->
       <view class="price">￥{{item.totalFee}}</view>
+      <view class="{{item.isActive?'vipInfo':'limit-ellipsis vipInfo'}}" style="{{item.isActive?'':'height:42rpx'}}">
+        <text>{{item.rightsInfo}}</text>
+      </view>
     </view>
   </view>
   <view class="fix-bottom flex-center-Y justify-between" wx:if="{{vipData.memberGrade==1000}}">
@@ -38,3 +51,5 @@
     </view>
 </view>
 </view>
+<login-model showModal="{{showModal}}"  bindcloseModel="closeLoginModel" bindreflashData="reflashData"></login-model>
+<role-model showModal="{{showRoleModal}}" bindshowLogin="showLogin"></role-model>
