--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -34,9 +34,10 @@ swiper{height: 200rpx;margin-bottom: 40rpx}
 .downLoad .box .img{width: 60rpx;height: 60rpx;margin-right: 10rpx}
 .downLoad .box .word{font-size: 20rpx;line-height: 1.4;color: #333;width: 80rpx;margin-right: 20rpx}
 .downLoad .box .btn{width: 78rpx;height: 44rpx;background: rgba(235, 242, 253, 1);color: #2D879C;border:2rpx solid #2D879C;font-size: 20rpx;line-height: 44rpx;border-radius: 12rpx;text-align: center;position: absolute;right:20rpx;top:50%;transform: translateY(-50%);}
-.bottomBox{background: #ffffff;border-radius: 24rpx;transform: translateY(-170rpx);width: 690rpx;margin-left: 30rpx;padding: 30rpx;height: 200rpx;margin-bottom: 30rpx;position: relative;}
+.bottomBox{background: #ffffff;border-radius: 24rpx;transform: translateY(-170rpx);width: 690rpx;margin-left: 30rpx;padding: 30rpx;margin-bottom: 30rpx;position: relative;overflow: hidden;}
 .bottomBox.active{border: 2rpx solid #f8c00a;}
 .bottomBox .title{font-size: 32rpx;font-weight: bold;color: #333333;}
 .bottomBox .date{font-size: 28rpx;color: #999999;}
 .bottomBox .tip{font-size: 24rpx;color: #999999;line-height: 1.5;}
 .bottomBox .price{font-size: 36rpx;color: #2D879C;font-weight: bold;position: absolute;bottom: 30rpx;right: 30rpx;}
+.vipInfo{width: 100%;font-size: 24rpx;color: #999999;line-height: 1.5;background: #ffffff;width: 80%;}
