--- a/pages/myOrder/myOrder.wxss
+++ b/pages/myOrder/myOrder.wxss
@@ -18,8 +18,10 @@
 .line .left .goodsImg{width: 120rpx;height: 120rpx;border-radius: 24rpx;margin-right: 20rpx;}
 .box .center{font-size: 24rpx;color: #999;border-bottom: 2rpx solid #F5F5F5;padding-bottom: 30rpx;padding-left: 30rpx;padding-right: 30rpx;}
 .box .center .label{margin-left: 120rpx;}
-.box .bottom{font-size: 28rpx;color: #333;}
+.box .bottom{font-size: 28rpx;color: #333;margin-top: 20rpx;}
 .box .bottom .btn,.box .bottom .btn1,.box .bottom .btn2{width:100rpx;height: 48rpx;line-height: 48rpx;font-size: 24rpx;border-radius: 8rpx;color: #999;text-align: center;}
 .box .bottom .btn1{border:2rpx solid #2D879C;color: #2D879C;background: #fff;border-radius: 24rpx;}
 .box .bottom .btn2{border:0;color: #999999;background: #fff;}
 .bold{font-weight: bold;}
+.payBtn{width:120rpx;height: 48rpx;line-height: 48rpx;font-size: 24rpx;border-radius: 8rpx;color: #ffffff;text-align: center;background: #795548;}
+.payBtn1{width:120rpx;height: 48rpx;line-height: 48rpx;font-size: 24rpx;border-radius: 8rpx;color: #795548;text-align: center;background: #ffffff;border-color: 795548;border:2rpx solid #795548;margin-right: 20rpx;}
