--- a/pages/myOrder/myOrder.wxss
+++ b/pages/myOrder/myOrder.wxss
@@ -1,6 +1,7 @@
 /* pages/myOrder/myOrder.wxss */
+page{background: #ffffff;}
 .container{margin-top: 110rpx;padding-bottom:200rpx;}
-.tab{margin-top:30rpx;width:100%;height:74rpx;position:fixed;top:0;left:0;display: flex;align-items: flex-end;color: rgba(153, 153, 153, 1);font-size: 28rpx;background: #fff;}
+.tab{padding-top:30rpx;width:100%;height:104rpx;position:fixed;top:0;left:0;display: flex;align-items: flex-end;color: rgba(153, 153, 153, 1);font-size: 28rpx;background: #fff;z-index: 20;}
 .tab .active{color: rgba(51, 51, 51, 1);font-weight: bold;font-size: 28rpx;position: relative;}
 .tab .active:after{content: "";display: block;height: 8rpx;width: 40rpx;border-radius:4rpx;background: #2D879C;position: absolute; left: 50%;transform: translateX(-50%);bottom: -30rpx}
 .box{background: #fff;margin-bottom: 30rpx;border-radius: 20rpx;padding:30rpx;position: relative;}
