音频进度条问题&会员到期时间&首页增加商城教学视频tab

--- a/pages/homeIndex/homeIndex.wxss
+++ b/pages/homeIndex/homeIndex.wxss
@@ -406,23 +406,24 @@ swiper,
 /* pages/culture/culture.wxss */
 
 .tab-h {
-    transform: translateY(-40rpx);
+    /* transform: translateY(-40rpx); */
     padding-left: 30rpx;
     height: 100rpx;
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
     line-height: 80rpx;
-    font-size: 28rpx;
+    font-size: 30rpx;
     white-space: nowrap;
     z-index: 99;
-    background: #fff
+    background: #fff;
+    margin-bottom: 4rpx;
 }
 
 .tab-item {
     text-align: center;
     width:12%;
-    margin: 0 36rpx;
+    margin-right: 58rpx;
     display: inline-block;
     color: rgba(153, 153, 153, 1);
 }
@@ -543,7 +544,7 @@ swiper,
 }
 
 .van-dropdown-item {
-    top: 700rpx!important;
+    top: 800rpx!important;
 }
 
 .van-dropdown-menu__title,.van-dropdown-item__title{font-size: 28rpx!important;}
@@ -668,7 +669,7 @@ swiper,
       position: fixed;
       top: 60%;
       right: 10rpx;
-      z-index: 10;
+      z-index: 1000;
   }
 
   .functionBox .order{
