--- a/pages/homeIndex/homeIndex.wxml
+++ b/pages/homeIndex/homeIndex.wxml
@@ -50,9 +50,9 @@
     <view class="flex-center-Y" style="padding-top:30rpx;background-color: rgba(249, 249, 249, 1);">
         <view class="goods">
             <view class="tab-h">
-                <view wx:for="{{tabList}}" wx:for-item='list' wx:key="index" class="tab-item {{activeTab==index?'active':''}}" data-current="{{index}}" bindtap="swichNav">{{list.typeName}}</view>
+                <view wx:for="{{tabList}}" wx:for-item='list' wx:key="index" class="tab-item {{activeTab==index?'active':''}}" data-current="{{index}}" bindtap="swichNav" style="{{list.id==1?'width:24%':''}}">{{list.typeName}}</view>
             </view>
-            <view class="searchBox">
+            <view class="searchBox" wx:if="{{activeTab!='2'}}">
                 <view class="search-l">
                     <input placeholder="{{activeTab=='0'?'搜索歌曲名称':(activeTab=='1'?'搜索教学视频':'搜索商品名称')}}" class="search-int" value="{{inputValue}}" bindinput="getInput"></input>
                     <image class="search-img1" src="../../images/homeIndex/search.png"></image>
@@ -62,7 +62,7 @@
                     <!-- <view class="search-int1" catchtap="clear"></view> -->
                 </view>
             </view>
-            <view class="tabs">
+            <view class="tabs" wx:if="{{activeTab!='2'}}">
                 <view class="left">
                     <van-dropdown-menu active-color="#2d879c" class="{{typeId && value2?'all':(typeId && !value2?'one':(!typeId && value2?'two':''))}}">
                         <van-dropdown-item value="{{ typeId }}" options="{{ typeList }}" bindchange="getTypeId"/>
@@ -70,7 +70,7 @@
                     </van-dropdown-menu>
                 </view>
             </view>
-            <scroll-view scroll-y="true" class="container" style="width:calc(100vw - 60rpx);height: calc(100vh - 860rpx);overflow: scroll;" bindscrolltolower="bindscrolltolower">
+            <scroll-view wx:if="{{activeTab!='2'}}" scroll-y="true" class="container" style="width:calc(100vw - 60rpx);height: calc(100vh - 860rpx);overflow: scroll;" bindscrolltolower="bindscrolltolower">
                 <view wx:for="{{goodsList}}" wx:key="index" class="article content">
                     <button class="mask" wx:if="{{hasUserInfo==false}}" bindtap="getUserProfile"></button>
                     <view class="bottom flex-center-Y" bindtap="toDetail" data-skucode="{{item.skuCode}}">
